--- a/app/src/main/res/layout/activity_userarea.xml
+++ b/app/src/main/res/layout/activity_userarea.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
+        android:onClick="addNew"
         android:text="@string/action_add_new"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/skipthis"
@@ -47,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:onClick="skipToSearch"
         android:text="@string/action_skip"
         app:layout_constraintBaseline_toBaselineOf="@+id/addNew"
         app:layout_constraintEnd_toEndOf="parent"
