--- a/app/src/main/res/layout/activity_tutor_session_post.xml
+++ b/app/src/main/res/layout/activity_tutor_session_post.xml
@@ -21,16 +21,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="@string/session_title" />
+                android:hint="@string/session_title"
+                android:inputType="text" />
 
             <EditText
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textMultiLine"
-                android:text="@string/session_description" />
+                android:hint="@string/session_description"
+                android:inputType="textMultiLine" />
 
             <TextView
                 android:id="@+id/date"
@@ -58,6 +58,19 @@
                 android:ems="10"
                 android:hint="HH:MM"
                 android:inputType="time" />
+
+            <TextView
+                android:id="@+id/location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ideal tutoring place " />
+
+            <EditText
+                android:id="@+id/location_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName" />
         </LinearLayout>
     </ScrollView>
 
