--- a/app/src/main/res/layout/activity_userarea.xml
+++ b/app/src/main/res/layout/activity_userarea.xml
@@ -8,29 +8,29 @@
 
     <TextView
         android:id="@+id/tvWelcome"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="374dp"
+        android:layout_height="28dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
         android:text="you"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/sessionView"
         android:layout_width="292dp"
-        android:layout_height="40dp"
+        android:layout_height="38dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
         android:text="Your Tutor Session:"
         app:layout_constraintBottom_toTopOf="@+id/addNew"
         app:layout_constraintHorizontal_bias="0.173"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
-        app:layout_constraintVertical_bias="0.074" />
+        app:layout_constraintVertical_bias="0.128" />
 
     <Button
         android:id="@+id/addNew"
@@ -58,8 +58,7 @@
     <TextView
         android:id="@+id/tvTest"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
+        android:layout_height="40dp"
         android:text="Help us to get more information of youself! Start your journey!"
         app:layout_constraintBottom_toTopOf="@+id/sessionView"
         app:layout_constraintStart_toStartOf="@+id/sessionView" />
