--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,6 +33,7 @@
         android:id="@+id/btLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:onClick="onClickLogin"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
