--- a/app/src/main/res/layout/activity_tutor_session_post.xml
+++ b/app/src/main/res/layout/activity_tutor_session_post.xml
@@ -79,6 +79,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:onClick="onClickSubmit"
         android:text="@string/action_sumbit_form"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
