--- a/app/src/main/res/layout/activity_userarea.xml
+++ b/app/src/main/res/layout/activity_userarea.xml
@@ -6,39 +6,27 @@
     android:layout_height="match_parent"
     tools:context="com.example.yunjingliu.tutorial.UserareaActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    <TextView
+        android:id="@+id/tvWelcome"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="16dp" />
 
-            <TextView
-                android:id="@+id/tvWelcome"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="16dp" />
-
-            <TextView
-                android:id="@+id/tvTest"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Help us to get more information of youself! Start your journey!"
-                tools:layout_editor_absoluteX="28dp"
-                tools:layout_editor_absoluteY="21dp" />
-
-            <EditText
-                android:id="@+id/sessionView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textMultiLine"
-                android:text="@string/session_profile_head" />
-        </LinearLayout>
-    </ScrollView>
+    <TextView
+        android:id="@+id/tvTest"
+        android:layout_width="345dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Help us to get more information of youself! Start your journey!"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="50dp" />
 
     <Button
         android:id="@+id/addNew"
@@ -77,5 +65,21 @@
         app:layout_constraintEnd_toStartOf="@+id/skipthis"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/addNew" />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="293dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="110dp">
+
+
+        <TextView
+            android:id="@+id/sessionView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/session_profile_head" />
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
