--- a/app/src/main/res/layout/session_detail.xml
+++ b/app/src/main/res/layout/session_detail.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:baselineAligned="false"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvSessionDetail"
-        android:layout_width="356dp"
-        android:layout_height="299dp"
+        android:layout_width="394dp"
+        android:layout_height="421dp"
         android:layout_weight="1"
         android:text="TextView" />
+
+    <Button
+        android:id="@+id/btEditSession"
+        android:layout_width="match_parent"
+        android:layout_height="26dp"
+        android:layout_weight="1"
+        android:onClick="sessionEdit"
+        android:text="Edit" />
 </LinearLayout>
