--- a/app/src/main/res/layout/session_detail.xml
+++ b/app/src/main/res/layout/session_detail.xml
@@ -8,9 +8,15 @@
     <TextView
         android:id="@+id/tvSessionDetail"
         android:layout_width="394dp"
-        android:layout_height="421dp"
+        android:layout_height="466dp"
         android:layout_weight="1"
         android:text="TextView" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Back" />
 
     <Button
         android:id="@+id/btEditSession"
