--- a/app/src/main/res/layout/session_detail_show.xml
+++ b/app/src/main/res/layout/session_detail_show.xml
@@ -32,9 +32,13 @@
 
     <TextView
         android:id="@+id/tvSessionDetail"
-        android:layout_width="406dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="41dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/btEdit"
