--- a/app/src/main/res/layout/activity_userarea.xml
+++ b/app/src/main/res/layout/activity_userarea.xml
@@ -10,11 +10,14 @@
     <TextView
         android:id="@+id/tvTest"
         android:layout_width="345dp"
-        android:layout_height="46dp"
+        android:layout_height="52dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="17dp"
         android:text="Help us to get more information of youself! Start your journey!"
+        app:layout_constraintBottom_toTopOf="@+id/lvSessionList"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="17dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/addNew"
@@ -45,21 +48,25 @@
     <ListView
         android:id="@+id/lvSessionList"
         android:layout_width="0dp"
-        android:layout_height="352dp"
-        android:layout_marginBottom="88dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btAppliedSession"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTest" />
 
     <Button
         android:id="@+id/btAppliedSession"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Check Applied"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="34dp"
         android:onClick="checkSessionApplied"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="431dp" />
+        android:text="Check Applied"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/skipthis"
+        app:layout_constraintTop_toBottomOf="@+id/lvSessionList" />
 
 </android.support.constraint.ConstraintLayout>
