--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,18 +2,31 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/navigation_search"
+        android:enabled="true"
+        android:icon="@drawable/ic_my_search_design"
+        android:title="@string/Title_search"
+        android:visible="true" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_message"
+        android:enabled="true"
+        android:icon="@drawable/ic_my_message_design"
+        android:title="@string/Title_message"
+        android:visible="true" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_application"
+        android:enabled="true"
+        android:icon="@drawable/ic_my_application_design"
+        android:title="@string/Title_application"
+        android:visible="true" />
+
+    <item
+        android:id="@+id/navigation_me"
+        android:enabled="true"
+        android:icon="@drawable/ic_my_me_design"
+        android:title="@string/Title_me"
+        android:visible="true" />
 
 </menu>
