--- a/app/src/main/res/layout/fragment_session_list.xml
+++ b/app/src/main/res/layout/fragment_session_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context="com.example.yunjingliu.tutorial.ApplicationFragment">
+    tools:context="com.example.yunjingliu.tutorial.SessionListFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -19,7 +19,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:text="@string/applied_session"
+            android:text="@string/posted_session"
             android:textSize="25dp"
             app:layout_constraintBottom_toTopOf="@+id/lvSessionPosted"
             app:layout_constraintEnd_toEndOf="parent"
