--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.yunjingliu.tutorial.DukeTutor">
+    tools:context="com.example.yunjingliu.tutorial.navigation.DukeTutor">
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
