--- a/app/src/main/res/layout/fragment_session_list.xml
+++ b/app/src/main/res/layout/fragment_session_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context="com.example.yunjingliu.tutorial.SessionListFragment">
+    tools:context="com.example.yunjingliu.tutorial.navigation.SessionListFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
