--- a/app/src/main/res/menu/session_detail_menu.xml
+++ b/app/src/main/res/menu/session_detail_menu.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu  xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_option_edit"
         android:icon="@drawable/ic_session_edit"
         android:title="@string/session_edit"
-        android:visible="true" />
+        android:visible="true"
+        app:showAsAction="always"/>
 
 
 
