--- a/app/src/main/res/menu/session_detail_feedback_menu.xml
+++ b/app/src/main/res/menu/session_detail_feedback_menu.xml
@@ -2,11 +2,11 @@
 <menu  xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menu_option_edit"
-        android:icon="@drawable/ic_edit_session"
-        android:title="@string/session_edit"
+        android:id="@+id/menu_option_feedback"
+        android:icon="@drawable/ic_feedback_session"
+        android:title="@string/session_detail_feedback"
         android:visible="true"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
 
 
 
