--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.yunjingliu.tutorial.RegistrationActivity">
+    tools:context="com.example.yunjingliu.tutorial.registration_and_login.RegistrationActivity">
 
     <EditText
         android:id="@+id/etUsername"
